# Benchmark

./: .gitignore  CMakeLists.txt  HW4.c  README.md  benchmark_settings.txt  plots.py
Sortfolder/: arr_handler.h  benchmark.c  gen_arr.c  single_arr.c  sort.c  typeofsorts.docx
